# RULER-da

./: .gitignore  README.md  eval.py  eval.toml  main.py  pyproject.toml
docker/: requirements.txt
docs/: tasks.md
scripts/: launch.py  run.sh
scripts/data/: manifest_utils.py  prepare.py  tokenizer.py
scripts/data/synthetic/: common_words_extraction.py  constants.py  freq_words_extraction.py  niah.py  qa.py  variable_tracking.py
scripts/data/synthetic/json/: build_danish_longtext.py  build_danish_words.py  download_danish_wikipedia.sh
scripts/eval/: evaluate.py  summarize_lengths.py
scripts/eval/synthetic/: constants.py
scripts/plot/: plot_niah.py
scripts/pred/: call_api.py  client_wrappers.py
